# emacs-modules-th-test

./: .gitignore  README.md  emacs-module-th-test.cabal  stack.yaml
cbits/: foo.c
flib/: FFlib.hs  FLib.hs  Flib.hs
lib/: FLib.hs
