name:                emacs-module-th-test
version:             0.1.0.0
license:             BSD3
build-type:          Simple
cabal-version:       >=2.0

library
  exposed-modules:      Lib
                      , Flib
  hs-source-dirs:       lib
                      , flib
  build-depends:        base,
                        bytestring,
                        emacs-module
  default-language:     Haskell2010

foreign-library myflib
  type:                 native-shared
  hs-source-dirs:       flib
  other-modules:
  build-tools:          hsc2hs
  c-sources:            cbits/foo.c
  build-depends:        base,
                        bytestring,
                        emacs-module,
                        emacs-module-th-test
  default-language:     Haskell2010
  if os(windows)
    options: standalone
